# ru_graduates

./: .gitignore  README.md  plotting_settings.py  pyproject.toml
ru_graduates/: map_figure.py
